# project-step-3-G14

./: README.md  operations.py  pyproject.toml  shopping_list.py
.github/workflows/: ci.yml  tests.yml
freshfridge/alerts/: __init__.py  expiry.py  lowstock.py
freshfridge/freshfridge/: __init__.py
freshfridge/freshfridge/inventory/: items.py  persistence.py
freshfridge/freshfridge/reporting/: shopping_list.py
freshfridge/inventory/: __init__.py  items.py  operations.py  persistence.py
freshfridge/reporting/: __init__.py  base_report.py  shopping_list.py  summary.py
freshfridge/test/: test_expiry.py  test_items.py  test_suite.py
script/: freshfridge_app.py
test/: test_base_report.py  test_expiry.py  test_items.py  test_lowstock.py  test_operations.py  test_persistence.py  test_shopping_list.py  test_suite.py  test_summary.py
